--- a/client_files/browser/css/inventory.css
+++ b/client_files/browser/css/inventory.css
@@ -114,7 +114,7 @@
     border-color: #aaa;
 }
 
-#inventory .body-items .column.active:hover {
+#inventory .body-items .column.active:empty:hover {
     background-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -614,7 +614,7 @@
 }
 
 #inventory .item.dragging {
-    opacity: 0;
+    opacity: 0.5;
 }
 
 #inventory .item .close {
@@ -683,9 +683,9 @@
 #inventory .loader .lds-rolling div,
 #inventory .loader .lds-rolling div:after {
     position: absolute;
-    width: 2vh;
-    height: 2vh;
-    border: 0.5vh solid #ddd;
+    width: 2.2vh;
+    height: 2.2vh;
+    border: 0.4vh solid #FFDF29;
     border-top-color: transparent;
     border-radius: 50%;
 }
@@ -779,36 +779,37 @@
 
 #inventory .item-menu {
     background: #111e;
-    border: 1px solid #fff4;
+    /*border: 1px solid #fff4;*/
     box-shadow: none;
-    font-size: 2vh;
+    font-size: 1.5vh;
     height: fit-content;
     max-height: 40vh;
     overflow-y: auto;
     padding: 0;
     position: absolute;
     width: fit-content;
+    text-align: center;
 }
 
 #inventory .item-menu .menu-item {
-    display: flex;
-    font-weight: bold;
-    padding: 1vh 1.5vh;
+    /*display: flex;*/
+    font-weight: 400;
+    padding: 1vh 3vh;
+    border-radius: 1.2vh;
 }
 
 #inventory .item-menu .menu-item:hover {
-    background-color: #444;
+    background-color: #FFDF29;
     /* border-color: #777; */
-    color: #fff;
+    color: #000;
 }
 
 #inventory .item-menu .menu-item:not(:last-child) {
-    border-bottom: 1px solid #5557;
+    /*border-bottom: 1px solid #5557;*/
 }
 
 #inventory .item-menu .menu-item .arrow {
-    margin-left: 2vh;
-    text-align: right;
+    /*margin-left: 2vh;*/
     width: 100%;
 }
 
@@ -831,7 +832,7 @@
     height: fit-content;
     margin: 0.49vh;
     width: fit-content;
-    /*grid-gap: 0.15vh;*/
+    grid-gap: 1px;
 }
 
 #inventory .items .column {
@@ -843,7 +844,7 @@
     height: 2.45vh;
     width: 2.45vh;
     border-radius: 0.4vh;
-    margin: 0.07vh;
+    /*margin: 0.07vh;*/
 }
 
 #inventory .items .column.access {
@@ -895,6 +896,7 @@
 
 #inventory .playerInventory>.block .container {
     width: 42vh;
+    display: flow-root;
 }
 
 #inventory .playerInventory .container .header {
